[package]
name = "day15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A lightweight logging facade for Rust 
log = "0.4.14"
# A logging implementation for `log` which is configured via an environment variable. 
env_logger = "0.10.0"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.51"
# A dead simple ANSI terminal color painting library.
yansi = "0.5"
# A macro for declaring lazily evaluated statics in Rust.
lazy_static = "1.4.0"
# The package provides the MD5 hash function.
md5 = "0.7.0"

# A byte-oriented, zero-copy, parser combinators library
nom = "7.1.1"
# An implementation of regular expressions for Rust.
regex = "1.5.5"
# A JSON serialization file format
serde_json = "1.0.81"

utils = { path = "../utils" }
